fix: keep source visible during heat haze

--- a/css/fervidum.css
+++ b/css/fervidum.css
@@ -57,7 +57,6 @@ body.fervidumComplete {
   position: relative;
   z-index: 1;
   touch-action: manipulation;
-  transition: opacity 220ms ease-in-out;
 }
 
 .fervidumWave {
@@ -74,27 +73,13 @@ body.fervidumComplete {
   will-change: opacity;
 }
 
-body.fervidumWarpActive .fervidumSource {
-  opacity: 0;
-}
-
 body.fervidumWarpActive .fervidumWave {
   opacity: 1;
-}
-
-body.fervidumExit .fervidumSource {
-  opacity: 1;
-  transition: opacity 260ms ease-out;
 }
 
 body.fervidumExit .fervidumWave {
   opacity: 0;
   transition: opacity 260ms ease-out;
-}
-
-body.fervidumReset .fervidumSource {
-  opacity: 1;
-  transition: none;
 }
 
 body.fervidumReset .fervidumWave {
